--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -1,91 +1,319 @@
 
+body.root.experiment div, body.root.experiment p{
+	line-height: 30px;
+}
+
+
+body.root.experiment h3 , h4{
+	font-size: 60px;
+	letter-spacing: 10px;
+	margin: 0;
+}
+
+
+body.root.experiment .navbar-static-top {
+	background-color: transparent !important;
+}
+
+
+.container:before, .container:after {
+	content: none !important;
+	display: none !important;
+}
+
+
 body.root.experiment .container {
 	padding-right: 0px;
 	padding-left: 0px;
-	width: 100vw;
+	width: 100%;
 	text-align: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
 
-}
-body.root.experiment .inner-container{
-	font-family: DejaVuSans;
-}
+
+
 body.root.experiment .primary-header {
-	display: block;
-	width: 100vw;
+	display: flex;
+	justify-content: center;
+	width: 100%;
 	margin-top: 0px;
 	margin-bottom: 0px;
 	padding-top: 60px;
 	padding-bottom: 60px;
 	padding-left: 20px;
+	text-align: left;
+	> div {
+		position: relative;
+		width: 1240px;
+	}
+	
+	h1 {
+		font-family: BebasNeue-Bold;
+		font-size: 100px;
+		line-height: 100px;
+		width: 800px;
+		color: white;
+		margin: 0;
+		z-index: 100;
+	}
+
+	.experiment-selected-category{
+
+		font-family: DejaVuSans;
+		color: #fff;
+
+		a {
+			font-family: inherit;
+			color: inherit;
+		}
+
+		.experiment-selected-category-label{ 
+			opacity: 0.7;
+		}
+	}
+
+
 }
-body.root.experiment .primary-header h1{
-	font-family: BebasNeue-Bold;
-	font-size: 70px;
-}
-body.root.experiment .primary-header .experiment-selected-category{
-	font-family: DejaVuSans;
-	color: #fff;
-}
-body.root.experiment .primary-header .experiment-selected-category a{
-	font-family: DejaVuSans;
-	color: #fff;
-}
-body.root.experiment .primary-header .experiment-selected-category .experiment-selected-category-label{
-	opacity: 0.7;
-}
+
+
+
+
+.nav > li > a {
+  padding-right: 0 !important;
+} 
+
+
+
 body.root.experiment .navbar {
+
+    margin-bottom: 0px;
+    display: flex;
+   	justify-content: center;
+   	padding-top: 20px;
+
     background-color: transparent;
     border-color: transparent;
-    margin-bottom: 0px;
     border: 0;
+
+    .container {
+    	flex-direction: row;
+   	    align-items: center;
+    	justify-content: space-between;
+    	width: 1240px;
+    	margin: 0;
+    }
+
+	.search-input {
+		border: 0px;
+		box-shadow: none;
+		font-family: 'BebasNeue-Bold';
+		color: #323C71;
+		text-align: right;
+		font-size: 20px;
+	}
+
+   .about-element {
+		font-family: 'BebasNeue-Bold';
+	  	font-size: 20px;
+	}
+
+    .about-element > a {
+    	color: #333333;
+
+    	&:hover, &:focus {
+    		color: #464545;
+    	}
+
+    }
+
+   .logo_image {
+   		width: 150px;
+   		height: 150px;
+   }
+
+   form {
+   		border: none;
+   }
 }
+
+
+body.root.experiment .exp-background {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 150vh;
+		z-index: -1;
+		display: flex;
+		justify-content: space-between;
+		align-items: flex-start;
+
+		img {
+			opacity: 0.2;
+			position: relative;
+		}
+
+		.up-left {
+			left: 40px;
+			top: 200px;
+		}	
+
+		.up-right {
+			top: 0;
+		}
+
+}
+
+
+body.root.experiment .experiment_first_element {
+	position: relative;
+	min-height: 400px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+	z-index: 1000;
+	> div {
+		position: relative;
+	}
+		
+
+
+	.arrow {
+		position: absolute;
+		bottom: -140px;
+		padding: 15px 15px 10px 15px;
+	}
+
+}
+
+body.root.experiment .inner-container-wrap {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	background-color: white;
+}
+
+
+body.root.experiment .inner-container{
+	position: relative;
+	font-family: DejaVuSans;
+	width: 1240px;
+	padding-top: 70px;
+
+	> div {
+		margin: 50px 0 50px 0;
+	}
+
+	.exp-igrendients-image, .exp-direction-images {
+		width: 590px;
+		height: 375px;
+		background-position: center center;
+	}
+	
+}
+
+
+body.root.experiment .exp-video {
+	position: absolute;
+	width: 700px;
+	height: 450px;
+	background-color: red;
+	right: 0;
+	top: -430px;
+	z-index: 12;
+
+	background-image: url("http://sciencehousefoundation.org/wp-content/uploads/2011/12/Screen-Shot-2011-12-30-at-12.47.04-PM-500x278.png");
+	background-position: center center;
+	background-size: cover;
+}
+
+
 
 body.root.experiment .exp-intro {
-	display: inline-block;
-	width: 650px;
-	padding-left: 20px;
-	padding-right: 20px;
+	width: 800px;
 	text-align: left;
-	font-size: 24px;
+	font-size: 18px;
 }
-body.root.experiment .exp-ingredients {
-	display: block;
-	width:100%;
-	text-align: center;
-}
-body.root.experiment .exp-ingredients ul {
-	display: inline-block;
-	text-align: left;
-	width: 650px;
-}
-body.root.experiment .exp-ingredients h3 {
-	display: inline-block;
-	width: 650px;
-	text-align: left;
-	font-size: 50px;
-}
-body.root.experiment .exp-ingredients li{
-	list-style-type: circle;
-	text-align: left;
-	font-size: 22px;
 
+
+body.root.experiment .exp-ingredients {
+	display: flex;
+	width:100%;
+	position: relative;
+
+	> h3 {
+		display: none;
+	}
 }
+
+body.root.experiment .exp-ingredients .line-circle {
+	position: absolute;
+	top: 55px;
+	left: 520px;
+	display: flex;
+	align-items: center;
+
+	.line {
+		width: 280px;
+		height: 2px;
+	}
+
+	.circle {
+		height: 16px;
+		width: 16px;
+		border-radius: 8px;
+	}
+	
+}
+
+body.root.experiment .exp-ingredients ul {
+	text-align: left;
+	width: 40%;
+	margin-left: 40px;
+
+	h3 {
+		margin-bottom: 10px;
+	}
+
+	li{
+		list-style-type: circle;
+		text-align: left;
+		font-size: 18px;
+		margin-top: 5px;
+		padding: 0;
+	}
+}
+
+
+
+
+
 
 
 body.root.experiment .exp-directions{
-	padding-left: 20px;
-	padding-right: 20px;
-}
-body.root.experiment .exp-directions ul{
-	list-style: none;
+	width:100%;
+	position: relative;
+	
+	ul{
+		list-style: none;
+		padding: 0;
+	}
+
+	> ul{
+		font-size: 18px;
+	}
+
+	> h3 {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
 }
 
-body.root.experiment .exp-directions h3{
-	display: inline-block;
-	width:650px;
-	font-size: 50px;
-	text-align: left;
-}
 body.root.experiment .exp-directions .exp-directions-buttons{
 	.direction-previous > svg{
 		-webkit-transform: rotate(180deg);
@@ -116,169 +344,510 @@ body.root.experiment .exp-directions .exp-directions-buttons{
 		}
 	}
 
+	position: absolute;
+	top: 70px;
+	left: 0;
+}
 
+body.root.experiment .exp-directions .line {
+	position: absolute;
+	top: 90px;
+	left: 90px;
+	height: 2px;
+	width: 600px;
+	z-index: 0;
 }
-body.root.experiment .exp-directions > ul{
-	padding-left: 0px;
-	font-size: 22px;
-}
+
+	
 body.root.experiment .exp-directions .exp-direction-item{
 	display: none;
 	list-style: none;
-	width: 650px;
-}
-body.root.experiment .exp-directions .exp-direction-item.active{
-	display: inline-block;
-}
-body.root.experiment .exp-directions .exp-direction-index{
-	color: #fff;
 }
 
-body.root.experiment .exp-explanation {
-	display: block;
-	width: 100%;
-	background-color: #f6f6f6;
+body.root.experiment .exp-directions .exp-direction-item.active{
+	display: flex;
+	justify-content: space-between;
+
+	.exp-direction-images {
+		position: relative;
+	}
+
+	.exp-direction-content {
+		margin-top: 137px;
+		text-align: left;
+		width: 550px;
+	}
+
+	.exp-direction-images-wrap {
+		position: relative;
+	}
+
+	.exp-direction-index {
+		position: absolute;
+		left: -20px;
+		top: 53px;	
+	}
+}
+
+
+
+body.root.experiment .exp-directions .exp-direction-index{
+	color: white;
+	height: 72px;
+	line-height: 72px;
+
+	width: 40px;
+	font-family: BebasNeue-Bold;
+	font-size: 60px;
 	text-align: center;
 }
-body.root.experiment .exp-explanation h3{
-	display: inline-block;
-	width:650px;
-	font-size: 50px;
+
+
+
+body.root.experiment .exp-warning {
+	align-self: flex-start;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 	text-align: left;
+	margin-top: -40px !important;
+	position: relative;
+	width: 550px;
+	border-width: 0.3px;
+	border-style: solid;
+	border-color: red;
+	h4 {
+		position: absolute;
+		top: -15px;
+		left: 20px;
+		font-size: 30px;
+		z-index: 100;
+		color: red !important;
+		background-color: white;
+		padding: 0 10px 0 10px;
+	}
+
+	div {
+		padding: 25px 30px 20px 30px;
+		font-size: 16px;
+	}
 }
 
-body.root.experiment .exp-explanation p{
-	display: inline-block;
-	width: 650px;
-	text-align: left;
-	font-size: 24px;
+
+
+
+body.root.experiment .exp-explanation {
+	position: relative;
+	display: block;
+	width: 100%;
+	background-color: #ececec;
+	display: flex;
+	justify-content: center;
+	h3 {
+		margin-top: 30px;
+	}
+
+	p{
+		width: 800px;
+		text-align: left;
+		font-size: 18px;
+	}
+
 }
+
+
+body.root.experiment .exp-explanation .exp-explanation-background {
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
+	height: 100%;
+	width: 500px;
+	background-size: cover;	
+}
+
+body.root.experiment .exp-explanation > div {
+	width: 1240px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	position: relative;
+}
+
+
+body.root.experiment .exp-explanation .line {
+	position: relative;
+	width: 350px;
+	left: -100px;
+	height: 2px;
+	margin-bottom: 15px;
+}
+
+
+
 body.root.experiment .app-footer {
-  background-color: #f6f6f6;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
+  background-color: #ececec;
+  padding: 10px;
 }
 body.root.experiment main {
     margin-bottom: 41px;
     font-family: DejaVuSans;
-
 }
+
 body.root.experiment .category-font-color{
 	font-family: BebasNeue-Bold;
-	font-size: 60px;
 }
 
 
 
-@media (min-width:1300px){
-	 /* desktop size; elements in reverse order */
+
+body.root.experiment .experiment-nav {
+	z-index: 1000;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	a {
+		color: inherit !important;
+		font-size: 20px;
+	}
+
+	path{
+		fill: inherit;
+	}
+
+	.arrow-image {
+		width: 20px;
+		height: auto;
+	}
+
+	.arrow-left {
+		-webkit-transform: rotate(90deg) translate(-160%, -40%);
+		-moz-transform: rotate(90deg) translate(-160%, -40%);
+		-ms-transform: rotate(90deg) translate(-160%, -40%);
+		-o-transform: rotate(90deg) translate(-160%, -40%);
+		transform: rotate(90deg) translate(-160%, -40%);
+	}
+
+	.arrow-right {
+		-webkit-transform: rotate(-90deg) translate(160%, 20%);
+		-moz-transform: rotate(-90deg) translate(160%, 20%);
+		-ms-transform: rotate(-90deg) translate(160%, 20%);
+		-o-transform: rotate(-90deg) translate(160%, 20%);
+		transform: rotate(-90deg)  translate(160%, 20%);
+	}
+
+
+	&.previous{
+		position: fixed;
+		left: 20px;
+		top:50vh;
+	}	
+
+	&.next{
+		position: fixed;
+		right: 20px;
+		top:50vh;
+	}	
+
+}
+
+
+
+
+
+@media screen and (max-width: 1550px) {
+	body.root.experiment .experiment-nav {
+		display: none;
+	}
+
+	body.root.experiment .exp-background {
+		.up-right {
+			display: none;
+		}
+	}
+
+
+
+}
+
+@media screen and (max-width: 1300px) {
 	body.root.experiment .inner-container{
-		width: 80%;
-		margin-right: auto;
-		margin-left: auto;
-	}
-	body.root.experiment .exp-direction-content{
-		width: 40%;
-		padding-top: 45px;
-		float: left;
-	}
-	body.root.experiment .exp-directions .active{
-		width: 100%;
-	}
-	body.root.experiment .exp-directions  .exp-directions-buttons{
-		position: relative;
-		top: 145px;
-		width: 100px;
+		font-family: DejaVuSans;
+		width: 90vw;
 
-	}
-	body.root.experiment .exp-directions .active	.exp-direction-images {
-		float: right;
-		width: 50%
-	}
-	body.root.experiment .exp-directions .active	.exp-direction-images img{
-		width: 100%
-	}
-	body.root.experiment .exp-directions .exp-direction-index{
-		height: 112px;
-		width: 71px;
-		position: relative;
-		left: 51.5%;
-		top: 60px;
-		font-family: BebasNeue-Bold;
-		font-size: 80px;
-	}
-	body.root.experiment .exp-directions h3{
-		display: block;
-		width: 40%;
-		position: relative;
-		top:120px;
-		left: 30px;
-		font-size: 60px;
+		.exp-igrendients-image, .exp-direction-images {
+			width: 40vw;
+		}
 	}
 
-	body.root.experiment .exp-ingredients	.exp-igrendients-image {
-		float: left;
-		width: 50%
+	body.root.experiment .exp-explanation > div,  body.root.experiment .navbar .container, 
+	body.root.experiment .primary-header > div {
+		width: 90vw;
 	}
-	body.root.experiment .exp-ingredients	.exp-igrendients-image img{
-		width: 100%
+
+	body.root.experiment .exp-ingredients .line-circle {
+		left: calc(40vw - 40px);
 	}
-	body.root.experiment .exp-ingredients ul {
-		width: 40%;
+
+	body.root.experiment .exp-explanation .exp-explanation-background {
+		display: none;
 	}
-	body.root.experiment .exp-ingredients h3{
-		width: 40%;
-		font-size: 60px;
+
+
+	body.root.experiment .exp-background .up-left {
+		left: -200px;
 	}
-	body.root.experiment .exp-ingredients{
-		margin-top: 70px;
+
+}
+
+
+@media screen and (max-width: 1010px) {
+	body.root.experiment  h3{
+		font-size: 45px;
+		letter-spacing: 8px;
+		width: 90vw;
+		text-align: left;
 	}
+
+
+	body.root.experiment .experiment_first_element {
+		h1 {
+			width: auto;
+		}
+
+		min-height: auto;
+	}
+
+	body.root.experiment .inner-container h3{
+		margin-bottom: 20px;
+	}
+
+	body.root.experiment .primary-header .arrow {
+		bottom: -120px;	
+		.arrow-image {
+			width: 15px;
+			height: auto;
+		}
+
+	}
+
+	body.root.experiment .inner-container .exp-igrendients-image, 
+	body.root.experiment .inner-container .exp-direction-images {
+		width: 90vw;
+		height: 40vw;
+		margin-bottom: 20px;
+	}
+
+
+	body.root.experiment .exp-video {
+		position: relative;
+		width: 90vw;
+		height: 450px;
+		left: 0;
+		top: 0;
+		right: auto;
+	}
+
 	body.root.experiment .exp-intro {
-		float: left;
-		padding-bottom: 70px;
-		width: 80%;
-		margin-right: 10%;
-	}
-	body.root.experiment .primary-header h1{
-		font-size: 140px;
+		width: 90vw;
 	}
 
+	body.root.experiment .exp-ingredients {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width:100%;
+		position: relative;
+
+		h3 {
+			display: none;
+		}
+
+		> h3 {
+			display: block;
+		}
+	}
+
+	body.root.experiment .exp-ingredients .line-circle {
+		top: 55px;
+		left: 30px;
+		flex-direction: column;		
+		.line {
+			width: 2px;
+			height: 40px;
+		}
+
+		.circle {
+			height: 10px;
+			width: 10px;
+			border-radius: 5px;
+			order: 2;
+		}
+		
+	}
+
+
+	body.root.experiment .exp-ingredients ul {
+		text-align: left;
+		width: 90vw;
+		margin-left: 0;
+		padding-left: 20px;
+	}
+
+
+
+	body.root.experiment .exp-ingredients li{
+		list-style-type: circle;
+		text-align: left;
+		font-size: 18px;
+		margin-top: 5px;
+		padding: 0;
+	}
+
+	body.root.experiment .exp-explanation p{
+		width: auto;
+	}
+
+	body.root.experiment .exp-directions{
+		display: flex;
+		flex-direction: column;
+
+		> h3 {
+			position: relative;
+		}
+	
+		.line {
+			display: none;
+		}
+	}
+
+
+	body.root.experiment .exp-directions .exp-direction-item.active{
+		display: flex;
+		flex-direction: column;
+
+		.exp-direction-images {
+			position: relative;
+		}
+
+		.exp-direction-content {
+			margin: 0 0 60px 0;
+			text-align: left;
+			width: calc(90vw - 60px);
+			order: 1;
+			align-self: flex-end;
+		}
+
+		.exp-direction-images-wrap {
+			position: relative;
+		}
+
+		.exp-direction-index {
+			position: absolute;
+			left: 0;
+			top: auto;
+			bottom: -70px;	
+		}
+	}
+
+
+	body.root.experiment .exp-directions .exp-direction-index{
+		color: white;
+		height: 72px;
+		line-height: 72px;
+
+		width: 40px;
+		font-family: BebasNeue-Bold;
+		font-size: 60px;
+		text-align: center;
+	}
+
+
+	body.root.experiment .exp-warning {
+		width: 90vw;
+
+		h3 {
+			width: auto;
+		}
+			
+		div {
+			padding: 20px;
+		}
+	}
+}
+
+
+@media screen and (max-width: 767px) {
+	body.root.experiment .navbar {
+	    background-color: transparent;
+	    .container {
+	    	flex-direction: column;
+	   	    align-items: flex-start;
+	    	justify-content: space-between;
+	    	height: auto;
+	    	margin: 0;
+	    }
+
+	    .container > * {
+	    	text-align: left;
+	    }
+
+	    ul {
+	    	margin: 10px 0 10px 0;
+	    }
+
+	    input {
+	    	text-align: left;
+	    }
+
+	    form {
+	    	width: 90vw;
+	    	padding: 5px;
+	    	margin: 0;
+	    }
+
+	}
+
+
+	body.root.experiment .primary-header h1 {
+		font-size: 80px;
+		line-height: 80px;
+	}
 
 }
-body.root.experiment .search-input{
-  border: 0px;
-  box-shadow: none;
-  font-family: 'BebasNeue-Bold';
-  color: #323C71;
-  text-align: right;
-  font-size: 20px;
 
+@media screen and (max-width: 500px) {
+	body.root.experiment .up-left {
+		display: none;
+	}
 }
 
-body.root.experiment .about-element{
-  font-family: 'BebasNeue-Bold';
-  font-size: 20px;
-  color: #323C71;
+@media screen and (max-width: 450px) {
+	body.root.experiment h3 {
+		font-size: 40px;
+	}
+
+
+	body.root.experiment .primary-header h1 {
+		font-size: 65px;
+	}
 }
 
-body.root.experiment .previous{
-	position: fixed;
-	left: 20px;
-	top:50vh;
-	z-index: -100;
-}
-body.root.experiment .next{
-	position: fixed;
-	right: 20px;
-	top:50vh;
-	z-index: -100;
-}
-@media (max-width:900px){
-	body.root.experiment .previous{
-	display: none;
-}
-body.root.experiment .next{
-	display: none;
-}
+
+@media screen and (max-width: 350px) {
+
+	body.root.experiment .primary-header h1 {
+		font-size: 50px;
+	}
+
+	body.root.experiment h3 {
+		font-size: 35px;
+	}
+
+    body.root.experiment .navbar .logo_image {
+    	width: 150px;
+    	height: 150px;
+	}
 }
