added gif and youtube fields

--- a/app/assets/stylesheets/experiment.scss
+++ b/app/assets/stylesheets/experiment.scss
@@ -243,12 +243,12 @@ body.root.experiment .exp-video {
 	position: absolute;
 	width: 700px;
 	height: 450px;
-	background-color: red;
+	/*background-color: red;*/
 	right: 0;
 	top: -430px;
 	z-index: 12;
 
-	background-image: url("http://sciencehousefoundation.org/wp-content/uploads/2011/12/Screen-Shot-2011-12-30-at-12.47.04-PM-500x278.png");
+	/*background-image: url("http://sciencehousefoundation.org/wp-content/uploads/2011/12/Screen-Shot-2011-12-30-at-12.47.04-PM-500x278.png");*/
 	background-position: center center;
 	background-size: cover;
 }
