--- a/app/views/admin/experiments/_form.html.erb
+++ b/app/views/admin/experiments/_form.html.erb
@@ -243,8 +243,21 @@
     </span>
   </div>
 
+  <div class="file input optional form-group" id="experiment_gif_input">
+    <span class="form-label">
+      <label for="experiment_gif" class=" control-label"><%= t('activerecord.attributes.experiment.gif') %></label>
+    </span>
+    <% if object.gif.exists? %>
+      <%= image_tag(object.gif.url('small')) %>
+    <% end %>
+    <span class="form-wrapper">
+      <input accept=".gif" id="experiment_gif" name="experiment[gif]" type="file">
+    </span>
+  </div>
 
+  <hr />
 
+  <%= f.input :youtube_url, as: :url %>
 
 
   <%= f.actions do %>
