--- a/app/views/shared/_experiment_show.html.erb
+++ b/app/views/shared/_experiment_show.html.erb
@@ -8,7 +8,7 @@
 
 <div class="experiment_first_element primary-header ">
 
-  <div>
+  <div id='experiment_header_elements_wrap'>
     <h1>
     <%=@experiment.title%>
     </h1>
@@ -25,7 +25,24 @@
       <%= inline_svg('arrow_bottom_white.svg', class: 'arrow-image') %>
     </div>
 
+      <% 
+        img = @experiment.gif.exists? ? @experiment.gif.url('xl') : image_path("categories/placeholders/#{params[:category]}.png") 
+        style=''
+        iframe = ''
+        if !@experiment.youtube_video_id.present?
+          style="background-image: url('#{img}')"
+        end
+      %>
+      
+      <div id='exp-video' class='exp-video' style="<%= style %>">
+        <% if @experiment.youtube_video_id.present? %>
+          <div id='player' data-video-id=<%= @experiment.youtube_video_id %>>
+             <iframe width="700" height="450"  src="https://www.youtube.com/embed/<%= @experiment.youtube_video_id %>?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 
+          </div>
+
+        <% end %>
+      </div>
 
   </div> 
 
@@ -36,19 +53,7 @@
   <div class='exp-background' style='background-image: url(<%= img %>)'></div>
 
   <div class="inner-container">
-      <% 
-        img = @experiment.gif.exists? ? @experiment.gif.url('xl') : image_path("categories/placeholders/#{params[:category]}.png") 
-        style=''
-        iframe = ''
-        if !@experiment.youtube_video_id.present?
-          style="background-image: url('#{img}')"
-        end
-      %>
-      <div class='exp-video' style="<%= style %>">
-        <% if @experiment.youtube_video_id.present? %>
-          <iframe width="700" height="450" src="https://www.youtube.com/embed/<%= @experiment.youtube_video_id %>?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        <% end %>
-      </div>
+
 
       <div class="exp-intro">
         <%= @experiment.intro %>
