--- a/app/assets/stylesheets/index_categories.scss
+++ b/app/assets/stylesheets/index_categories.scss
@@ -103,6 +103,88 @@ body.root.index .index_categories li{
   }
 }
 
+/*LOGO*/
+
+body.root.index .logo-wrapper{
+  padding-top: 40px;
+  position: relative;
+  &:hover {
+    .logo {
+        transform: rotateY(180deg);
+        opacity: 0.1;
+      }
+
+    .hover-text {
+      transform: rotateY(0deg);
+      opacity: 1;
+    }
+  }
+
+}
+
+
+body.root.index .logo-wrapper .hover-layer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+  
+
+body.root.index .logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(0deg);
+  transition: all 0.4s;
+  opacity: 1;
+}
+
+
+body.root.index .logo-wrapper .logo-back-text, body.root.index .logo-wrapper .hover-text {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  color: #2D1E49;
+  font-size: 30px;
+  font-family: 'BebasNeue-Bold';
+  letter-spacing: 2.5px;
+  p {
+    margin: 0;
+  }  
+} 
+
+body.root.index .logo-wrapper .logo-back-text {
+    opacity: 0.15;
+}
+
+ body.root.index .logo-wrapper .hover-text  {
+    transition: all 0.4s;
+    transform: rotateY(-180deg);
+    opacity: 0;
+ }
+
+
+
+/* manages the text paragraph of the logo, seperate class because of seperate hover */
+body.root.index .logo .logo-text {
+  z-index: 100;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 100;
+  color: #2D1E49;
+  font-family: 'DejaVuSans';
+  margin: 20px 0 40px 0;
+  letter-spacing: 1px;
+}
+
+
+
 body.root.index .index_text {
   -moz-transition:0.80s;
   -webkit-transition:.8s;
@@ -143,59 +225,21 @@ body.root.index .index_text:not(:hover){
   transition:.8s;
   color: #2d1e49;
 }
+
 body.root.index .index_categories li.category-item {
   -moz-border-radius: 70px;
   border-radius: 70px;
   background-color: #6EB5F5;
 }
 
-/* manages the text paragraph of the logo, seperate class because of seperate hover */
-body.root.index .logo .logo-text {
-  z-index: 100;
-  text-align: center;
-  font-size: 13px;
-  font-weight: 100;
-  color: #2D1E49;
-  font-family: 'DejaVuSans';
-  margin: 20px 0 20px 0;
-  letter-spacing: 1px;
 
-}
+
+
 
 body.root.index form-control > *{
   color: reds !important;
 }
-/* logo div */
 
-
-/* logo image*/
-
-body.root.index .index_categories .logo .hover-text{
-  display: block;
-  z-index: 100;
-  position: absolute;
-  top: 140px;
-  text-align: center;
-  font-size: 30px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #2D1E49;
-  visibility: hidden;
-}
-
-
-body.root.index .index_categories .logo:hover {
-  .logo-text{
-  visibility: hidden;
-  }
-  .logo_image{
-  visibility: hidden;
-  }
-  .hover-text{
-  visibility: visible;
-
-  }
-}
 
 /* smartphone size, because icons are so large most margins removed*/
 
@@ -215,3 +259,4 @@ body.root.index .index_categories .logo:hover {
 }
 
 }
+
