--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -5,15 +5,24 @@
 
 <% if @categories.present? %>
   <ul class="categories_main">
-      <li class = "logo">
-        <%= inline_svg('Logo_mecnieri.svg', class: 'logo_image')%>
-        <p class="hover-text">
-        <%= t('.discover') %>
-        </p>
-        <p class="logo-text">
-          <%= t('.about').html_safe %>
-        </p>
+      <li class = "logo-wrapper">
+        <div class='hover-layer'></div>
+        <div class='hover-text'>
+          <p>
+            <%= t('.discover') %>
+          </p>
+        </div>
+        <div class='logo'>
+          <%= inline_svg('Logo_mecnieri.svg', class: 'logo_image')%>
+          <p class="logo-back-text"> 
+            <%= t('.discover') %>
+          </p>
+          <p class="logo-text">
+            <%= t('.about').html_safe %>
+          </p>
+        </div>
       </li>
+
 
     <% @categories.each do |category| %>
       <li class="category-item" id="<%= "category_#{category.slug}" %>">
