--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -7,11 +7,11 @@
   <ul class="categories_main">
       <li class = "logo-wrapper">
         <div class='hover-layer'></div>
-        <div class='hover-text'>
+<!--         <div class='hover-text'>
           <p>
             <%= t('.discover') %>
           </p>
-        </div>
+        </div> -->
         <div class='logo'>
           <%= inline_svg('Logo_mecnieri.svg', class: 'logo_image')%>
           <p class="logo-back-text"> 
